# lost-art

./: .hgignore  .hgtags  .travis.yml  CMakeLists.txt  GUI Builder.sln  readme.md
GUI Builder/: GUI Builder.vcxproj  GUI Builder.vcxproj.filters  application customization.h  application template.cpp  compile.sh  dialog demo wide.las  dialog demo.las  eigen-rational interface code.h  geometry.cpp  geometry.h  graphene.cpp  graphene.h  gui model.cpp  gui model.h  linear system solving.cpp  linear system solving.h  lone rectangle.las  main.cpp  notes.txt  opengl overloads.h  pixels and millimeters1.las  pixels and millimeters2.las  portable type names.h  symbol table.cpp  symbol table.h  symbolic computation.cpp  symbolic computation.h  todo.txt
Generated Application/: Generated Application.vcxproj  Generated Application.vcxproj.filters
examples/: alternative formulations.las  bad and ugly.las  dialog demo wide.las  dialog demo.las  different anchors.las  invalid characters.las  last session.las  last session1.las  last session2.las  missing constraint.las  mixed units.las  name type.las  negative variable values.las  no html-css equivalent.las  rational coefficients.las  unknown unit suffix.las
source/: eigen-rational interface code.hpp  geometry.cpp  geometry.hpp  graphene.cpp  graphene.hpp  gui model.cpp  gui model.hpp  linear system solving.cpp  linear system solving.hpp  main.cpp  opengl overloads.hpp  portable type names.hpp  std overloads.hpp  symbol table.cpp  symbol table.hpp  symbolic computation.cpp  symbolic computation.hpp
source/graphene/: dsel.hpp  event adaptors.hpp  function objects.hpp
source/graphene/frames/: behavioural.hpp  event-handling.hpp  interface.hpp  renderable.hpp  stateful.hpp
source/gui model/: constraint.hpp  controls.hpp  model.hpp
templates/: CMakeLists.txt  glut-application.cpp
tests/: geometry.cpp  graphene.cpp  gui-model.cpp  linear-system-solving.cpp  symbol-table.cpp  symbolic-computation.cpp
tests/graphene/: dsel.cpp  event-adaptors.cpp  function-objects.cpp
tests/graphene/frames/: behavioural.cpp  event-handling.cpp  interface.cpp  renderable.cpp  stateful.cpp
tests/gui-model/: constraint.cpp  controls.cpp  model.cpp
